--- a/JavaScript/Stopwatch/style.css
+++ b/JavaScript/Stopwatch/style.css
@@ -2,12 +2,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: hsl(0, 0%, 90%);
+    background-color: hsl(0, 0%, 0%);
 }
 #myH1{
     font-size: 4rem;
     font-family: Arial, sans-serif;
-    color: hsl(0, 0%, 25%);
+    color: hsl(0, 0%, 91%);
 }
 #container{
     display: flex;
@@ -16,13 +16,13 @@ body{
     border: 5px solid;
     border-radius: 50px;
     padding: 30px;
-    background-color: white;
+    background-color: rgb(51, 51, 51);
 }
 #display{
     font-size: 5rem;
     font-family: monospace;
     font-weight: bold;
-    color: hsl(0, 0%, 30%);
+    color: hsl(0, 0%, 74%);
     text-shadow: 2px 2px 2px hsl(0, 0%, 0%, 0.75);
     margin-bottom: 25px;
 }
@@ -35,7 +35,7 @@ body{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    color: white;
+    color: rgb(255, 255, 255);
     transition: background-color 0.5s ease;
 }
 #startBtn{
